--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,11 @@ sonar.projectVersion=1.0
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
 sonar.sources=.
-sonar.jacoco.reportPaths=./target/jacoco.exec
- 
+sonar.exclusions=**/*_test.go
+
+sonar.tests=.
+sonar.test.inclusions=**/*_test.go
+
+sonar.go.coverage.reportPaths=junit.xml
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
