try different coverage file

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,6 +12,6 @@ sonar.exclusions=**/*_test.go
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 
-sonar.go.coverage.reportPaths=bin/coverage.xml
+sonar.go.coverage.reportPaths=bin/cov.out
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
